force-app/main/default/objects/Task_Approval__c/Task_Approval__c.object-meta.xml
<CustomObject>
    <label>Task Approval</label>
    <nameField>
        <displayFormat>TA-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>