force-app/main/default/objects/Task_Approval__c/fields/Task_Url__c.field-meta.xml
<CustomField>
    <fullName>Task_Url__c</fullName>
    <formula>IF(!ISBLANK(Task_Id__c), HYPERLINK(&#39;/lightning/r/&#39; + Task_Id__c + &#39;/view&#39;, Task_Id__c,&#39;_self&#39;), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Url</label>
    <type>Text</type>
</CustomField>