force-app/main/default/objects/Task_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Task_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>